<resources>
    <string name="app_name">iAuction</string>

    <string name="create_account">Create an account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="auctioner">Auctioner</string>
    <string name="bidder">Bidder</string>
    <string name="account_type">Account Type</string>
    <!--<string name="sign_up">Sign Up</string>-->
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="contact_number">Contact Number</string>
    <string name="forget_password">Forget Password?</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="explore">Explore</string>
    <string name="add_item">Add Item</string>


    <!--Spinner-->

    <string-array name="item_category">
        <item>Category</item>
        <item>Mobile Phones</item>
        <item>Electronics</item>
        <item>Computer</item>
        <item>Other</item>
    </string-array>

    <string-array name="item_condition">
        <item>Condition</item>
        <item>New</item>
        <item>Used</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_a_category">Choose a Category</string>
    <string name="item_condition">Item Condition</string>
    <string name="manufacturer_name">Manufacturer Name</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="minimum_bid_amount">Minimum Bid Amount</string>
    <string name="select_bid_end_date_amp_time"><![CDATA[Select Bid End Date & Time]]></string>
    <string name="submit">Submit</string>
    <string name="item_image">Item Image</string>


    <!--End Spinner-->
</resources>
