<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:theme="@style/MaterialTheme"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".controller.registration.SignUpFragment">

    <!--<TextView-->
    <!--android:text="@string/sign_in"-->
    <!--android:id="@+id/signInHeading"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent"-->
    <!--style="@style/registrationHeading"-->
    <!--android:layout_marginTop="20dp"-->
    <!--android:layout_marginStart="28dp"/>-->

    <!--<View-->
    <!--android:layout_width="90dp"-->
    <!--android:layout_height="2dp"-->
    <!--android:background="@color/primaryColor"-->
    <!--app:layout_constraintStart_toStartOf="@+id/signInHeading"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/signInHeading"/>-->

    <ScrollView android:layout_width="0dp" android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <!--<com.google.android.material.textfield.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="32dp"-->
            <!--android:layout_marginEnd="32dp"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"-->
            <!--android:hint="@string/user_name">-->
            <!--<com.google.android.material.textfield.TextInputEditText-->
            <!--android:id="@+id/createAccUserName"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="text"/>-->
            <!--</com.google.android.material.textfield.TextInputLayout>-->

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:hint="@string/email">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signInUserEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/colorAccent">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signInUserPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                    android:id="@+id/signInTypeStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="20dp"
                    android:checkedButton="@+id/signInBidderRadioBtn"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_type"
                        android:layout_marginEnd="20dp"/>
                <RadioButton
                        android:id="@+id/signInBidderRadioBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bidder"
                        android:layout_marginEnd="20dp"/>
                <RadioButton
                        android:id="@+id/signInAuctionerRadioBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/auctioner"/>
            </RadioGroup>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:id="@+id/forgetPasswordLink"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_horizontal"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/signInSignInBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/sign_in"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    app:strokeColor="@color/primaryColor"/>


            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_marginTop="30dp"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:text="@string/don_t_have_an_account"-->
            <!--android:layout_gravity="center"/>-->


            <!--<com.google.android.material.button.MaterialButton-->
            <!--android:id="@+id/signInSignUpBtn"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="32dp"-->
            <!--android:layout_marginEnd="32dp"-->
            <!--android:text="@string/create_account"-->
            <!--style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
            <!--app:strokeColor="@color/primaryColor"/>-->
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>